fixed navbar css and z-index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,7 +12,7 @@
   top: 0px;
   left: 0px;
   width:100%;
-  z-index: 3;
+  z-index: 2;
 }
 
 /* Logo */
